src/objects/collect__Loan_Account__c.object
<CustomObject>
    <description>Dummy Contract Object to test and increase code coverage where Loan or Lease contract was used.</description>
    <fields>
        <fullName>collect__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Aging__c</fullName>
        <formula>IF(AND(collect__Days_Past_Due__c&gt;0,collect__Days_Past_Due__c&lt;=30), &quot;0-30&quot;, IF(AND(collect__Days_Past_Due__c&gt;30,collect__Days_Past_Due__c&lt;=60),&quot;31-60&quot;,
IF(AND(collect__Days_Past_Due__c&gt;60,collect__Days_Past_Due__c&lt;=90),&quot;61-90&quot;,
IF(AND(collect__Days_Past_Due__c&gt;90,collect__Days_Past_Due__c&lt;=120),&quot;91-120&quot;,
IF(AND(collect__Days_Past_Due__c&gt;120,collect__Days_Past_Due__c&lt;=180),&quot;121-180&quot;,
IF(collect__Days_Past_Due__c&gt;180,&quot;180+&quot;,
&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Amount_to_Current__c</fullName>
        <label>Amount to Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Current_Payment_Amount__c</fullName>
        <label>Current Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Days_Past_Due__c</fullName>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Delinquent_Amount__c</fullName>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Fees_Remaining__c</fullName>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Invalid_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Last_Payment_Date__c</fullName>
        <label>Last_Payment_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>collect__Loan_Product__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Status__c</fullName>
        <label>Loan Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Number_of_Days_Overdue__c</fullName>
        <label>Number of Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Oldest_Due_Date__c</fullName>
        <label>Oldest Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Pay_Off_Amount_As_Of_Today__c</fullName>
        <label>Pay Off Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Pmt_Amt_Cur__c</fullName>
        <label>Pmt Amt Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Previous_Installment_Date__c</fullName>
        <label>Last Due Date</label>
        <type>Date</type>
    </fields>
    <label>Dev Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>